methods.basics.Methods.scala.code
def goAndGet() {
  while(!estSurBiscuit()){
    avance()
  }
  prend Biscuit()
  recule()  
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}